--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <script src='//vws.responsivevoice.com/v/e?key=UFY5I5RQ'></script>
+    <script src="badWordsList.js" charset="utf-8"></script>
     <script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
     <script src="bower_components/underscore/underscore-min.js" charset="utf-8"></script>
     <script src="templates.js" charset="utf-8"></script>
