--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
+    <!-- <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8"> -->
     <title>Insult App</title>
   </head>
   <body>
     <h1>The really awesome name of out Insult Generator</h1>
     <button class="giantButton">Click for Insult</button>
+    <input type='text' placeholder="Name">
     <section>
-      <input type='text' placeholder="Name">
       <div class="insultText">
         <!-- The insult template goes here. name, you are a insult -->
       </div>
