added function to generate insult string

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>The really awesome name of out Insult Generator</h1>
     <button class="giantButton">Click for Insult</button>
-    <input type='text' placeholder="Name">
+    <input type='text'name="name" placeholder="Name">
     <section>
       <div class="insultText">
         <!-- The insult template goes here. name, you are a insult -->
