--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <title>Insult App</title>
   </head>
   <body>
-    <h1>The really awesome name of out Insult Generator</h1>
+      <div id="wrapper">
+    <h1>The really awesome name of our Insult Generator</h1>
     <button class="giantButton">Click for Insult</button>
     <section>
-      <input type='text' placeholder="Name">
+      <input type="text" placeholder="Enter your Name">
       <div class="insultText">
         <!-- The insult template goes here. name, you are a insult -->
       </div>
       <button class="smallButton">Play Again</button>
     </section>
+
+
+      </div>
     <script src='//vws.responsivevoice.com/v/e?key=UFY5I5RQ'></script>
     <script src="badWordsList.js" charset="utf-8"></script>
     <script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
