added functions for the second button and edited the bad word list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="insultText">
         <!-- The insult template goes here. name, you are a insult -->
       </div>
-      <button class="smallButton">Play Again</button>
+      <div class="smallButtonArea">
+        <!-- smallButton goes here I hope I hope -->
+      </div>
     </section>
     <script src='//vws.responsivevoice.com/v/e?key=UFY5I5RQ'></script>
     <script src="badWordsList.js" charset="utf-8"></script>
