--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
-    <title>Insult App</title>
+    <title>Uncensored</title>
   </head>
   <body>
+    <aside class="logo">
+<img src="smile.png" alt=""  height="100" width="100"/>
+  </aside>
       <div id="wrapper">
-    <h1>The really awesome name of our Insult Generator</h1>
+
+    <h1>The Uncensored Brit</h1>
     <button class="giantButton">Click for Insult</button>
     <input type='text' name="name" placeholder="Name">
     <section>
