--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
   </head>
   <body>
     <aside class="logo">
-<img src="smile.png" alt=""  height="100" width="100"/>
+<img src="uncensored.jpg" alt=""  height="500" width="1200"/>
   </aside>
       <div id="wrapper">
 
-    <h1>The Uncensored Brit</h1>
-    <button class="giantButton">Click for Insult</button>
+
+    <section class= giant>
+
+
+    <button class="giantButton"><h3>Insult<h3></button>
     <input type='text' name="name" placeholder="Name">
+    </section>
     <section>
 
       <div class="insultText">
