--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
   </aside>
       <div id="wrapper">
 
-    <h1>The Uncensored Brit</h1>
+    <h1>Uncensored</h1>
+    <div class="dropdown">
+      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a href="#">HTML</a></li>
+          <li><a href="#">CSS</a></li>
+          <li><a href="#">JavaScript</a></li>
+        </ul>
+      </div>
     <button class="giantButton">Click for Insult</button>
     <input type='text' name="name" placeholder="Name">
     <section>
