styling stuff add new input areas

--- a/index.html
+++ b/index.html
@@ -11,27 +11,47 @@
     <aside class="logo">
 <img src="uncensored.jpg" alt=""  height="500" width="1200"/>
   </aside>
-      <div id="wrapper">
+  <div id="wrapper">
 
 
-    <h1>Uncensored</h1>
+    <h1 class="title">UNCENSORED</h1>
+
+    <input class="input" type='text' name="name" placeholder="CHOOSE VICTIM">
+
+    <input class="number" type='text' name="name" placeholder="CHOOSE NUMBER">
+
     <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-        <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-          <li><a href="#">HTML</a></li>
-          <li><a href="#">CSS</a></li>
-          <li><a href="#">JavaScript</a></li>
+      <h3>CHOOSE ACCENT</h3>
+      <div class="dropdown-content">
+        <ul>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
+          <li><a href="">place holder</a></li>
         </ul>
       </div>
+    </div>
+
 
 
     <section class= giant>
 
 
-    <button class="giantButton"><h3>Insult<h3></button>
+    <button class="giantButton"><h3>INSULT<h3></button>
 
-    <input type='text' name="name" placeholder="Name">
+
     </section>
     <section>
 
