--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <h1 class="title">UNCENSORED</h1>
 
-    <input class="input" type='text' name="name" placeholder="CHOOSE VICTIM">
+    <input class="input" type='text' name="name" placeholder="NAME A VICTIM...">
 
-    <input class="number" type='text' name="name" placeholder="CHOOSE NUMBER">
+    <input class="numInsults" type='text' name="numInsults" placeholder="CHOOSE NUMBER...">
 
     <div class="dropdown">
       <h3>CHOOSE ACCENT</h3>
