increased timeout for speech feature

--- a/index.html
+++ b/index.html
@@ -13,14 +13,9 @@
 <img src="uncensored.jpg" alt=""  height="500" width="1200"/>
   </aside>
   <div id="wrapper">
-
-
     <h1 class="title">UNCENSORED</h1>
-
     <input class="input" type='text' name="name" placeholder="NAME A VICTIM...">
-
     <input class="numInsults" type='text' name="numInsults" placeholder="CHOOSE NUMBER...">
-
     <div class="dropdown">
       <h3>CHOOSE ACCENT</h3>
       <div class="dropdown-content">
@@ -29,18 +24,10 @@
         </ul>
       </div>
     </div>
-
-
-
-    <section class= giant>
-
-
-    <button class="giantButton"><h3>INSULT<h3></button>
-
-
+    <section class='giant'>
+      <button class="giantButton"><h3>INSULT<h3></button>
     </section>
     <section>
-
       <div class="insultText">
         <!-- The insult template goes here. name, you are a insult -->
       </div>
@@ -48,9 +35,7 @@
         <!-- smallButton goes here I hope I hope -->
       </div>
     </section>
-
-
-      </div>
+  </div>
     <script src='//vws.responsivevoice.com/v/e?key=UFY5I5RQ'></script>
     <script src="badWordsList.js" charset="utf-8"></script>
     <script src="bower_components/jquery/dist/jquery.min.js" charset="utf-8"></script>
