--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   </head>
   <body>
     <aside class="logo">
-<img src="uncensored.jpg" alt=""  height="500" width="1200"/>
+<img src="uncensored.jpg" height="500" width="1200" alt="" />
   </aside>
   <div id="wrapper">
 
-
-    <h1 class="title">UNCENSORED</h1>
+<h1>UNCENSORED</h1>
+  <!-- <h1 class="title">UNCENSORED</h1>-->
+    <h4 class="info"> Press Spacebar and say insult[Name]</h4>
 
     <input class="input" type='text' name="name" placeholder="NAME A VICTIM...">
 
@@ -32,7 +33,7 @@
 
 
 
-    <section class= giant>
+    <section class="giant">
 
 
     <button class="giantButton"><h3>INSULT<h3></button>
